WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
278520
REGRESSION (
282602@main
): Broke all Internal iOS builds
https://bugs.webkit.org/show_bug.cgi?id=278520
Summary
REGRESSION (282602@main): Broke all Internal iOS builds
Jonathan Bedard
Reported
2024-08-22 07:55:10 PDT
282602@main
broke all Internal iOS builds, even after the partial fix in
282605@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Jonathan Bedard
Comment 1
2024-08-22 07:55:11 PDT
<
rdar://problem/134497742
>
Jonathan Bedard
Comment 2
2024-08-22 07:58:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32589
EWS
Comment 3
2024-08-22 08:03:27 PDT
Committed
282619@main
(b07168f66360): <
https://commits.webkit.org/282619@main
> Reviewed commits have been landed. Closing PR #32589 and removing active labels.
Ben Schwartz
Comment 4
2024-08-22 09:09:06 PDT
Reopened Bugzilla. REGRESSION (
282602@main
): [ iOS ] App WebKitTestRunnerApp.app crashed before stdin could be attached, tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=278525
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug