REGRESSION (282602@main): Broke all Internal iOS builds https://bugs.webkit.org/show_bug.cgi?id=278520 rdar://134497742

Unreviewed build fix.

* Source/WebKit/Platform/spi/ios/FrontBoardServicesSPI.h:

Canonical link: https://commits.webkit.org/282619@main